--- a/rest-server-app/build.gradle
+++ b/rest-server-app/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: "org.springframework.boot"
 
 dependencies {
+    compile 'org.mybatis:mybatis:3.5.2'
+    compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.0'
+    compile 'mysql:mysql-connector-java'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
